force-app/main/default/objects/Job_Position__c/Job_Position__c.object-meta.xml
<CustomObject>
    <description>Job roles opened by the client for hiring.</description>
    <label>Job Position</label>
    <nameField>
        <displayFormat>JP-{00000}</displayFormat>
        <label>Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>