force-app/main/default/objects/Job_Position__c/fields/Aditional_Skills__c.field-meta.xml
<CustomField>
    <fullName>Aditional_Skills__c</fullName>
    <label>Aditional Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>