force-app/main/default/objects/Job_Position__c/fields/Billing_cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_cycle__c</fullName>
    <inlineHelpText>Client payment term</inlineHelpText>
    <label>Billing cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Quaterly</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>BI-Weekly</fullName>
            </value>
            <value>
                <fullName>BI-Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>