force-app/main/default/objects/Job_Position__c/fields/Budgeted_CTC__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_CTC__c</fullName>
    <description>The maximum or targeted annual compensation budgeted for the position (Cost to Company).</description>
    <label>Budgeted CTC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>