force-app/main/default/objects/Job_Position__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup field referencing the client or company that is hiring for the position.</description>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The selected client should have the Status as Active</errorMessage>
        <filterItems>
            <field>Client__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Job Positions</relationshipLabel>
    <relationshipName>Job_Positions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>