force-app/main/default/objects/Job_Position__c/fields/Client_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Client_Bill_Rate__c</fullName>
    <inlineHelpText>Salary offered by client</inlineHelpText>
    <label>Client Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>