force-app/main/default/objects/Job_Position__c/fields/ClientBillRateSalary__c.field-meta.xml
<CustomField>
    <fullName>ClientBillRateSalary__c</fullName>
    <formula>&quot;₹&quot; &amp; TEXT(ROUND(Min_Salary__c, 2)) &amp; &quot; - ₹&quot; &amp; TEXT(ROUND(Max_Salary__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount Offered by client</inlineHelpText>
    <label>Client Bill Rate/Salary</label>
    <type>Text</type>
</CustomField>