force-app/main/default/objects/Job_Position__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Job position closing date.</description>
    <inlineHelpText>Job position closing date.</inlineHelpText>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>