force-app/main/default/objects/Job_Position__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <description>This field contains Point Of Contact.</description>
    <label>Client Manager(POC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>