force-app/main/default/objects/Job_Position__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief overview of the job responsibilities and expectations.</description>
    <label>Description</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>