force-app/main/default/objects/Job_Position__c/fields/Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Drive_Date__c</fullName>
    <description>The date of a scheduled hiring drive or bulk recruitment event for this position.</description>
    <label>Drive Date</label>
    <type>Date</type>
</CustomField>