force-app/main/default/objects/Job_Position__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>This field stores Email of client person.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>