force-app/main/default/objects/Job_Position__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <description>Specifies the nature of employment: Full-Time, Part-Time, Contract, Internship, etc.</description>
    <inlineHelpText>Specify the nature of the employment for this role</inlineHelpText>
    <label>Employment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full-Time</fullName>
            </value>
            <value>
                <fullName>Part-Time</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>