force-app/main/default/objects/Job_Position__c/fields/End_Client__c.field-meta.xml
<CustomField>
    <fullName>End_Client__c</fullName>
    <description>Company for which actually candidate is outsourced.</description>
    <inlineHelpText>Company for which actually candidate is outsourced.</inlineHelpText>
    <label>End Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>