force-app/main/default/objects/Job_Position__c/fields/Experience_Required__c.field-meta.xml
<CustomField>
    <fullName>Experience_Required__c</fullName>
    <description>Total Experience Required for the job position.</description>
    <label>Experience Required</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>