force-app/main/default/objects/Job_Position__c/fields/Hired_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Hired_Candidate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The total hired candidate against the job opening.</description>
    <label>Hired Candidate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>