force-app/main/default/objects/Job_Position__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <description>Additional details, recruiter comments, or expanded responsibilities for the job position.</description>
    <label>Job Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>