force-app/main/default/objects/Job_Position__c/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <description>Location for which candidate is hired</description>
    <inlineHelpText>Location for which candidate is hired.</inlineHelpText>
    <label>Job Location</label>
    <type>Address</type>
</CustomField>