force-app/main/default/objects/Job_Position__c/fields/Language_Known__c.field-meta.xml
<CustomField>
    <fullName>Language_Known__c</fullName>
    <label>Language known</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language</valueSetName>
    </valueSet>
</CustomField>