force-app/main/default/objects/Job_Position__c/fields/Max_Allowed_Submmission__c.field-meta.xml
<CustomField>
    <fullName>Max_Allowed_Submmission__c</fullName>
    <label>Max. Allowed Submmission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>