force-app/main/default/objects/Job_Position__c/fields/Maximum_Experience_Required__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Experience_Required__c</fullName>
    <label>Maximum Experience Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>