force-app/main/default/objects/Job_Position__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>The mode of the hiring process (e.g., Online, In-Person, Telephonic, Video Call).</description>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>College Drive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>