force-app/main/default/objects/Job_Position__c/fields/No_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days__c</fullName>
    <description>Will Clarify the working days per week for hybrid job</description>
    <label>No Of Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>