force-app/main/default/objects/Job_Position__c/fields/No_Of_Hours__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Hours__c</fullName>
    <label>No Of Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>