force-app/main/default/objects/Job_Position__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Enter any remarks or extra details about the job position here.</inlineHelpText>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>