force-app/main/default/objects/Job_Position__c/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <description>The date the job requisition was opened or made available for sourcing.</description>
    <label>Open Date</label>
    <type>Date</type>
</CustomField>