force-app/main/default/objects/Job_Position__c/fields/Pay_max_Salary__c.field-meta.xml
<CustomField>
    <fullName>Pay_max_Salary__c</fullName>
    <inlineHelpText>Offering to candidate/supplier(Max)</inlineHelpText>
    <label>Pay max Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>