force-app/main/default/objects/Job_Position__c/fields/Pay_Min_Salary__c.field-meta.xml
<CustomField>
    <fullName>Pay_Min_Salary__c</fullName>
    <inlineHelpText>Offering to candidate/supplier(Min)</inlineHelpText>
    <label>Pay Min Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>