force-app/main/default/objects/Job_Position__c/fields/Pay_Rate_Salary_range__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate_Salary_range__c</fullName>
    <formula>&quot;₹&quot; &amp; TEXT(Pay_Min_Salary__c) &amp; &quot; - &quot; &amp; &quot;₹&quot; &amp; TEXT(Pay_max_Salary__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount offered to Candidate or Supplier</inlineHelpText>
    <label>Pay Rate/ Salary range</label>
    <type>Text</type>
</CustomField>