force-app/main/default/objects/Job_Position__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This field stores Client&apos;s Phone number.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>