force-app/main/default/objects/Job_Position__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Job Positions</relationshipLabel>
    <relationshipName>Job_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>