force-app/main/default/objects/Job_Position__c/fields/Reason_for_Closing__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Closing__c</fullName>
    <description>If the Job Position status is set to &apos;Closed&apos;, the team must provide a specific reason for closing the Job Position.</description>
    <inlineHelpText>Required when the Job Position status is set to &apos;Closed&apos;. Select or enter the specific reason for closing this position</inlineHelpText>
    <label>Reason for Closing</label>
    <type>TextArea</type>
</CustomField>