force-app/main/default/objects/Job_Position__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal recruiter or staff responsible for filling the position. Typically a lookup to User.</description>
    <label>Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>