force-app/main/default/objects/Job_Position__c/fields/Required_Experience_Range__c.field-meta.xml
<CustomField>
    <fullName>Required_Experience_Range__c</fullName>
    <formula>TEXT( Minimum_Experience_Required__c ) + &quot; - &quot; + TEXT( Maximum_Experience_Required__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Experience Range</label>
    <type>Text</type>
</CustomField>