force-app/main/default/objects/Job_Position__c/fields/Requisition_department__c.field-meta.xml
<CustomField>
    <fullName>Requisition_department__c</fullName>
    <inlineHelpText>Helps to select department of reqiisition</inlineHelpText>
    <label>Requisition department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Human Resources (HR)</fullName>
            </value>
            <value>
                <fullName>Finance &amp; Accounts</fullName>
            </value>
            <value>
                <fullName>Information Technology (IT)</fullName>
            </value>
            <value>
                <fullName>Procurement / Purchase</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Customer Support / Service</fullName>
            </value>
            <value>
                <fullName>Legal &amp; Compliance</fullName>
            </value>
            <value>
                <fullName>Research &amp; Development (R&amp;D)</fullName>
            </value>
            <value>
                <fullName>Production / Manufacturing</fullName>
            </value>
            <value>
                <fullName>Quality Assurance (QA)</fullName>
            </value>
            <value>
                <fullName>Logistics &amp; Supply Chain</fullName>
            </value>
            <value>
                <fullName>Facilities Management</fullName>
            </value>
            <value>
                <fullName>Training &amp; Development</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Project Management Office (PMO)</fullName>
            </value>
            <value>
                <fullName>Security (Physical &amp; IT Security)</fullName>
            </value>
            <value>
                <fullName>Corporate Communications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>