force-app/main/default/objects/Job_Position__c/fields/Responded_By__c.field-meta.xml
<CustomField>
    <fullName>Responded_By__c</fullName>
    <label>Responded By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date Option</fullName>
            </value>
            <value>
                <fullName>Open Untill filled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>