force-app/main/default/objects/Job_Position__c/fields/Responded_Date__c.field-meta.xml
<CustomField>
    <fullName>Responded_Date__c</fullName>
    <label>Responded By Date</label>
    <type>Date</type>
</CustomField>