force-app/main/default/objects/Job_Position__c/fields/Salary_Range__c.field-meta.xml
<CustomField>
    <fullName>Salary_Range__c</fullName>
    <formula>&quot;₹&quot; &amp; TEXT(ROUND(Min_Salary__c, 2)) &amp; &quot; - ₹&quot; &amp; TEXT(ROUND(Max_Salary__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salary Range</label>
    <type>Text</type>
</CustomField>