force-app/main/default/objects/Job_Position__c/fields/Shift_Time__c.field-meta.xml
<CustomField>
    <fullName>Shift_Time__c</fullName>
    <description>Will show the shift timings.</description>
    <label>Shift Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Night</fullName>
            </value>
            <value>
                <fullName>Flexible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>