force-app/main/default/objects/Job_Position__c/fields/Skills_Required__c.field-meta.xml
<CustomField>
    <fullName>Skills_Required__c</fullName>
    <description>A multi-select list of technical or functional skills required for the position.</description>
    <inlineHelpText>Enter comma-separated skills. For example: Apex Programming, Admin, LWC, etc.</inlineHelpText>
    <label>Skills Required</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>