force-app/main/default/objects/Job_Position__c/fields/Soft_skills__c.field-meta.xml
<CustomField>
    <fullName>Soft_skills__c</fullName>
    <label>Soft skills</label>
    <type>TextArea</type>
</CustomField>