force-app/main/default/objects/Job_Position__c/fields/Total_Openings__c.field-meta.xml
<CustomField>
    <fullName>Total_Openings__c</fullName>
    <description>The number of candidates the client is looking to hire for this position.</description>
    <label>Total Openings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>