force-app/main/default/objects/Job_Position__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <description>The location where the candidate is expected to work (e.g., On-site, Remote, Hybrid).</description>
    <label>Work Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>