force-app/main/default/objects/Job_Position__c/fields/Work_Mode__c.field-meta.xml
<CustomField>
    <fullName>Work_Mode__c</fullName>
    <description>This field stores the job location.</description>
    <inlineHelpText>General location of the job.</inlineHelpText>
    <label>Work Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Off Site</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>