force-app/main/default/objects/Job_Position__c/validationRules/VR2_JP_Total_Openings.validationRule-meta.xml
<ValidationRule>
    <fullName>VR2_JP_Total_Openings</fullName>
    <active>false</active>
    <errorConditionFormula>Total_Openings__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Total_Openings__c</errorDisplayField>
    <errorMessage>Total Openings must be a positive number.</errorMessage>
</ValidationRule>