force-app/main/default/objects/Job_Position__c/validationRules/VR3_JP_Budgeted_CTC.validationRule-meta.xml
<ValidationRule>
    <fullName>VR3_JP_Budgeted_CTC</fullName>
    <active>false</active>
    <errorConditionFormula>Budgeted_CTC__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Budgeted_CTC__c</errorDisplayField>
    <errorMessage>Budgeted CTC must be a positive number.</errorMessage>
</ValidationRule>