force-app/main/default/objects/Job_Position__c/validationRules/VR3_JP_Positive_Salary.validationRule-meta.xml
<ValidationRule>
    <fullName>VR3_JP_Positive_Salary</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Min_Salary__c &lt;=0, Max_Salary__c &lt;=0, Pay_Min_Salary__c &lt;=0, Pay_max_Salary__c &lt;=0)</errorConditionFormula>
    <errorMessage>Amounts should be positive and greater than zero for Pay Min Salary,Pay max Salary,Min Salary and Max Salary</errorMessage>
</ValidationRule>