force-app/main/default/objects/Job_Position__c/validationRules/VR4_JP_Experience_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR4_JP_Experience_Required</fullName>
    <active>false</active>
    <errorConditionFormula>Experience_Required__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Experience_Required__c</errorDisplayField>
    <errorMessage>Experience Required must be a positive number.</errorMessage>
</ValidationRule>