force-app/main/default/objects/Job_Position__c/validationRules/VR5_Require_Reason_For_Closing.validationRule-meta.xml
<ValidationRule>
    <fullName>VR5_Require_Reason_For_Closing</fullName>
    <active>true</active>
    <description>Ensures a reason for closing is provided when the Job Position status is set to &apos;Closed&apos;.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;Closed&apos;),
    ISBLANK(Reason_for_Closing__c)
)</errorConditionFormula>
    <errorDisplayField>Reason_for_Closing__c</errorDisplayField>
    <errorMessage>Please provide a reason for closing the job position.</errorMessage>
</ValidationRule>