force-app/main/default/objects/Job_Position__c/validationRules/VR_JP_Responded_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_JP_Responded_Date</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    /* Case 1: Date selected but Date field is empty */
    AND(
        ISPICKVAL(Responded_By__c, &quot;Date Option&quot;),
        ISBLANK(Responded_Date__c)
    ),

    /* Case 2: Date NOT selected but Date field has value */
    AND(
        NOT(ISPICKVAL(Responded_By__c, &quot;Date Option&quot;)),
        NOT(ISBLANK(Responded_Date__c))
    )
)</errorConditionFormula>
    <errorMessage>Responded By Date should be filled only when Responded By is set to Date, and must be empty otherwise.</errorMessage>
</ValidationRule>